{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 72,
  "lineage": "88aebaec-fa4d-0498-4341-b2dd8bd0ad40",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:200268818177:loadbalancer/app/github-action-ecr/70ee8802b00e6956",
            "arn_suffix": "app/github-action-ecr/70ee8802b00e6956",
            "desync_mitigation_mode": "defensive",
            "dns_name": "github-action-ecr-332225287.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:200268818177:loadbalancer/app/github-action-ecr/70ee8802b00e6956",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "github-action-ecr",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0695632003bf9c63d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-040adc51864f6132a"
              },
              {
                "subnet_id": "subnet-067a86a2be6c33838"
              }
            ],
            "subnets": [
              "subnet-040adc51864f6132a",
              "subnet-067a86a2be6c33838"
            ],
            "tags": {
              "Name": "github-action-ecr"
            },
            "tags_all": {
              "Name": "github-action-ecr"
            },
            "vpc_id": "vpc-0973ee36740fb0f8f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.subnet_1",
            "aws_subnet.subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:200268818177:listener/app/github-action-ecr/70ee8802b00e6956/80c03675d58f1fcf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:200268818177:targetgroup/github-action-ecr/53e0d7dcbd1ea317",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:200268818177:listener/app/github-action-ecr/70ee8802b00e6956/80c03675d58f1fcf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:200268818177:loadbalancer/app/github-action-ecr/70ee8802b00e6956",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.alb_target_group",
            "aws_security_group.alb",
            "aws_subnet.subnet_1",
            "aws_subnet.subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:200268818177:targetgroup/github-action-ecr/53e0d7dcbd1ea317",
            "arn_suffix": "targetgroup/github-action-ecr/53e0d7dcbd1ea317",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:200268818177:targetgroup/github-action-ecr/53e0d7dcbd1ea317",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "github-action-ecr",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0973ee36740fb0f8f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:200268818177:internet-gateway/igw-08c37631e2c6ebae3",
            "id": "igw-08c37631e2c6ebae3",
            "owner_id": "200268818177",
            "tags": {
              "Name": "github-action-ecr"
            },
            "tags_all": {
              "Name": "github-action-ecr"
            },
            "vpc_id": "vpc-0973ee36740fb0f8f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:200268818177:route-table/rtb-029438374cd0f2cdc",
            "id": "rtb-029438374cd0f2cdc",
            "owner_id": "200268818177",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08c37631e2c6ebae3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "github-action-ecr"
            },
            "tags_all": {
              "Name": "github-action-ecr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0973ee36740fb0f8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cadc7eb8cd86b66d",
            "route_table_id": "rtb-029438374cd0f2cdc",
            "subnet_id": "subnet-067a86a2be6c33838"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.route_table",
            "aws_subnet.subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062ab7d44dc7c5fdb",
            "route_table_id": "rtb-029438374cd0f2cdc",
            "subnet_id": "subnet-040adc51864f6132a"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.route_table",
            "aws_subnet.subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:200268818177:security-group/sg-0695632003bf9c63d",
            "description": "inbound: 80,443 + outbound: all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0695632003bf9c63d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "github-action-ecr-alb",
            "name_prefix": "",
            "owner_id": "200268818177",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0973ee36740fb0f8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:200268818177:security-group/sg-000bb940fed519bff",
            "description": "inbound: 80 from ALB security group + outbound: all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000bb940fed519bff",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0695632003bf9c63d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "github-action-ecr-ecs",
            "name_prefix": "",
            "owner_id": "200268818177",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0973ee36740fb0f8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:200268818177:subnet/subnet-067a86a2be6c33838",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067a86a2be6c33838",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "200268818177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "github-action-ecr"
            },
            "tags_all": {
              "Name": "github-action-ecr"
            },
            "vpc_id": "vpc-0973ee36740fb0f8f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:200268818177:subnet/subnet-040adc51864f6132a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040adc51864f6132a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "200268818177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "github-action-ecr"
            },
            "tags_all": {
              "Name": "github-action-ecr"
            },
            "vpc_id": "vpc-0973ee36740fb0f8f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:200268818177:vpc/vpc-0973ee36740fb0f8f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-020bf53297b5e5ced",
            "default_route_table_id": "rtb-0deeb119cd9920baf",
            "default_security_group_id": "sg-069cd5dc7106a0950",
            "dhcp_options_id": "dopt-090d79694eb34fa2d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0973ee36740fb0f8f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0deeb119cd9920baf",
            "owner_id": "200268818177",
            "tags": {
              "Name": "github-action-ecr"
            },
            "tags_all": {
              "Name": "github-action-ecr"
            }
          }
        }
      ]
    }
  ]
}